--- a/Sparkt.WebApp/Views/Shared/_WorkMenu.cshtml
+++ b/Sparkt.WebApp/Views/Shared/_WorkMenu.cshtml
@@ -11,6 +11,13 @@
             <li class="fadeRight t-animated" data-t-show="7"><a href="@Url.Action("MahindraPragatiYojana","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/mmf-pragati-yojana-thum.jpg" alt="" /> <span>Mahindra Pragati Yojana</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="8"><a href="@Url.Action("MahindraRuralBharat","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/mahindra-rural-bharat-thum.jpg" alt="" /> <span>Mahindra Rural Bharat</span> </a> </li>
         </ul>
+
+        <ul id="pandg" class="horizontalScroll">
+            <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("seven-seas","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/seven-seas.jpg" alt="" /> <span>Seven Seas</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="2"><a href="@Url.Action("seven-seas-ar","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/seven-seas-ar.jpg" alt="" /> <span>Seven Seas Ar</span> </a> </li>
+        </ul>
+
+
         <ul id="starplus" class="horizontalScroll">
             <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("NayiSoch","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/nayosoch-thum.jpg" alt="" /> <span>Nayi Soch</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="2"><a href="@Url.Action("Ted","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/ted-thum.jpg" alt="" /> <span>TED TALKS INDIA</span> </a> </li>
@@ -49,8 +56,8 @@
             <li class="fadeRight t-animated" data-t-show="30"><a href="@Url.Action("TheVoice","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/thevoice-thum.jpg" alt="" /> <span>The Voice</span> </a> </li>
             <!--  <li class="fadeRight t-animated" data-t-show="10"><a href="ted.php" class="hvr-grow-shadow"><img src="images/thums/ted-thum.jpg" alt=""/> <span>Ted Talks</span> </a> </li>
 
-        <li class="fadeRight t-animated" data-t-show="11"><a href="kullfi.php" class="hvr-grow-shadow"><img src="images/thums/kullfi-thum.jpg" alt=""/> <span>Kullfi</span> </a> </li>
-        <li class="fadeRight t-animated" data-t-show="12"><a href="hsubh.php" class="hvr-grow-shadow"><img src="images/thums/hsubh-thum.jpg" alt=""/> <span>HAR SHAAKH PE ULLU BAITHAA HAI</span> </a> </li>	-->
+            <li class="fadeRight t-animated" data-t-show="11"><a href="kullfi.php" class="hvr-grow-shadow"><img src="images/thums/kullfi-thum.jpg" alt=""/> <span>Kullfi</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="12"><a href="hsubh.php" class="hvr-grow-shadow"><img src="images/thums/hsubh-thum.jpg" alt=""/> <span>HAR SHAAKH PE ULLU BAITHAA HAI</span> </a> </li>	-->
         </ul>
         <ul id="star" class="horizontalScroll">
             <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("Swp","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/swp-thum.jpg" alt="" /> <span>Star Writers Program</span> </a> </li>
@@ -80,22 +87,22 @@
             <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("Dubsmash","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/dubsmash-thum.jpg" alt="" /> <span>Dubsmash</span> </a> </li>
         </ul>
         @*<ul id="pedderjohnson" class="horizontalScroll">
-            <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("Pedderjohnson","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/pedderjohnson-thum.jpg" alt="" /> <span>Pedder Johnson</span> </a> </li>
-        </ul>*@
+                <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("Pedderjohnson","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/pedderjohnson-thum.jpg" alt="" /> <span>Pedder Johnson</span> </a> </li>
+            </ul>*@
         <ul id="yaarii" class="horizontalScroll">
             <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("Yaarii","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/yaarii-thum.jpg" alt="" /> <span>Yaarii</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="2"><a href="@Url.Action("yaarii-website","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/yaarii-website-thum.jpg" alt="" /> <span>Yaarii Website</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="2"><a href="@Url.Action("yaarii-films","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/yaarii-film-thum.jpg" alt="" /> <span>Yaarii Film</span> </a> </li>
         </ul>
         @*<ul id="boutique" class="horizontalScroll">
-            <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("bql","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/boutique-thum.jpg" alt="" /> <span>Boutique Living</span> </a> </li>
-        </ul>*@
+                <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("bql","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/boutique-thum.jpg" alt="" /> <span>Boutique Living</span> </a> </li>
+            </ul>*@
         @*<ul id="mgage" class="horizontalScroll">
-           <li class="fadeRight t-animated" data-t-show="1"><a href="m-gage.php" class="hvr-grow-shadow"><img src="images/thums/mGage-thum.jpg" alt=""/> <span>mGage</span> </a> </li>
-         </ul>
-        <ul id="times-network" class="horizontalScroll">
-          <li class="fadeRight t-animated" data-t-show="1"><a href="#" class="hvr-grow-shadow"><img src="images/thums/nach-baliye-8-thum.jpg" alt=""/> <span>Times Network</span> </a> </li>
-        </ul>*@
+               <li class="fadeRight t-animated" data-t-show="1"><a href="m-gage.php" class="hvr-grow-shadow"><img src="images/thums/mGage-thum.jpg" alt=""/> <span>mGage</span> </a> </li>
+             </ul>
+            <ul id="times-network" class="horizontalScroll">
+              <li class="fadeRight t-animated" data-t-show="1"><a  class="hvr-grow-shadow"><img src="images/thums/nach-baliye-8-thum.jpg" alt=""/> <span>Times Network</span> </a> </li>
+            </ul>*@
         <ul id="indiabulls" class="horizontalScroll">
             <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("sky","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/sky-thum.jpg" alt="" /> <span>Sky</span> </a> </li>
 
@@ -110,26 +117,67 @@
 
     </div>
     <div class="clear"></div>
-    <ul class="work-with-clients horizontalScroll">
-        <li class="mahindra"><a href="" data-related="mahindra" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/mahindra.png" alt="" /></a> </li>
-        <li class="star-plus"><a href="" data-related="starplus" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/starplus.png" alt="" /></a> </li>
+    <ul class="work-with-clients" id="work-with-clients">
+
+        <span class="prev" id="slideBack"> <i class="fa fa-angle-left" aria-hidden="true"></i> </span>
+        <span class="next" id="slide"> <i class="fa fa-angle-right" aria-hidden="true"></i> </span>
+
+
+        <li class="mahindra"><a data-related="mahindra" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/mahindra.png" alt="" /></a> </li>
+        <li class="star-plus"><a data-related="starplus" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/starplus.png" alt="" /></a> </li>
         <li class="star"><a href="" data-related="star" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/star.png" alt="" /></a> </li>
-        <li class="dubsmash"><a href="#" data-related="dubsmash" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/dubsmash.png" alt="" /></a> </li>
-        @*<li class="pedderjohnson"><a href="#" data-related="pedderjohnson" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/pedderjohnson.png" alt="" /></a> </li>*@
-        <li class="yaarii"><a href="#" data-related="yaarii" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/yaarii.png" alt="" /></a> </li>
-        <li class="indiabulls"><a href="#" data-related="indiabulls" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/indiabulls.png" alt="" /></a> </li>
+        <li class="yaarii"><a  data-related="yaarii" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/yaarii.png" alt="" /></a> </li>
 
-        <li class="piramal"><a href="#" data-related="piramal" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/piramal.png" alt="" /></a> </li>
-        <li class="usports"><a href="#" data-related="usports" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/usports.png" alt="" /></a> </li>
-        <li class="one-plus"><a href="#" data-related="oneplus" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/oneplus.png" alt="" /></a> </li>
-        <li class="editage"><a href="#" data-related="editage" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/editage.png" alt="" /></a> </li>
+        <li class="png-health"><a href="" data-related="pandg" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/p-and-g.png" alt="" /></a> </li>
+        <li class="usports"><a href="" data-related="usports" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/usports.png" alt="" /></a> </li>
 
-        <li class="nutrela"><a href="#" data-related="nutrela" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/nutrela.png" alt="" /></a> </li>
-        <li class="birlawhiteputty"><a href="#" data-related="birlawhiteputty" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/birla-white.png" alt="" /></a> </li>
-        @*<li class="dubsmash"><a href="#" data-related="dubsmash" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/dubsmash.png" alt="" /></a> </li>
-        <li class="pedderjohnson"><a href="#" data-related="pedderjohnson" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/pedderjohnson.png" alt="" /></a> </li>
-        <li class="yaarii"><a href="#" data-related="yaarii" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/yaarii.png" alt="" /></a> </li>*@
+        <li class="dubsmash"><a href="" data-related="dubsmash" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/dubsmash.png" alt="" /></a> </li>
+        @*<li class="pedderjohnson"><a  data-related="pedderjohnson" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/pedderjohnson.png" alt="" /></a> </li>*@
+
+        <li class="indiabulls"><a  data-related="indiabulls" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/indiabulls.png" alt="" /></a> </li>
+
+        <li class="piramal"><a  data-related="piramal" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/piramal.png" alt="" /></a> </li>
+
+        <li class="one-plus"><a  data-related="oneplus" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/oneplus.png" alt="" /></a> </li>
+        <li class="editage"><a  data-related="editage" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/editage.png" alt="" /></a> </li>
+
+        <li class="nutrela"><a  data-related="nutrela" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/nutrela.png" alt="" /></a> </li>
+        <li class="birlawhiteputty"><a  data-related="birlawhiteputty" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/birla-white.png" alt="" /></a> </li>
+        @*<li class="dubsmash"><a  data-related="dubsmash" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/dubsmash.png" alt="" /></a> </li>
+            <li class="pedderjohnson"><a  data-related="pedderjohnson" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/pedderjohnson.png" alt="" /></a> </li>
+            <li class="yaarii"><a  data-related="yaarii" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/yaarii.png" alt="" /></a> </li>*@
 
 
     </ul>
 </div>
+
+<script>
+    var button = document.getElementById('slide');
+    button.onclick = function () {
+        var container = document.getElementById('work-with-clients');
+        sideScroll(container, 'right', 25, 100, 10);
+    };
+
+    var back = document.getElementById('slideBack');
+    back.onclick = function () {
+        var container = document.getElementById('work-with-clients');
+        sideScroll(container, 'left', 25, 100, 10);
+    };
+
+    function sideScroll(element, direction, speed, distance, step) {
+        scrollAmount = 0;
+        var slideTimer = setInterval(function () {
+            if (direction == 'left') {
+                element.scrollLeft -= step;
+            } else {
+                element.scrollLeft += step;
+            }
+            scrollAmount += step;
+            if (scrollAmount >= distance) {
+                window.clearInterval(slideTimer);
+            }
+        }, speed);
+    }
+
+</script>
+
