--- a/Sparkt.WebApp/Views/work/Yaarii.cshtml
+++ b/Sparkt.WebApp/Views/work/Yaarii.cshtml
@@ -54,6 +54,42 @@
                             </div>
                         </div>
                     </div>
+
+                    <div>
+                        <div class="creative-assets ">
+                            <div class="container">
+                                <div class="assets-title">
+                                    <h3>Revised Visual Vocabulary with an enhanced interaction and transaction experience.</h3>
+                                </div>
+                                <div class="website-operation">
+                                    <figure class="figure-img"> <img src="~/Content/work/images/banner-video-trans.png" alt="brickex" class="responsive-img" style="width: 100%; vertical-align: top;" /> </figure>
+                                    <div class="desktop-video">
+
+
+                                        <video id="desktop" poster="~/Content/work/images/yaarii-desktop.jpg" style="max-width: 100%;" preload="none" controls="False">
+                                            <!--  <source  src="media/piramal-desktop.mp4" type="video/mp4" >-->
+
+                                        </video>
+                                        <script>
+                                            document.getElementById("desktop").controls = false;
+                                        </script>
+                                    </div>
+                                    <div class="mobile-video">
+                                        <video id="mobile" poster="~/Content/work/images/yaari-app.gif" style="max-width: 100%;" preload="none" controls="false">
+                                            <!--<source  src="media/piramal-mobile.mp4" type="video/mp4" >-->
+
+                                        </video>
+                                        <script>
+                                            document.getElementById("mobile").controls = false;
+                                        </script>
+                                    </div>
+
+                                    <a href="https://www.yaarii.in/" target="_blank" class="view-website">VIEW WEBSITE</a>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
