--- a/Sparkt.WebApp/Views/Shared/_WorkMenu.cshtml
+++ b/Sparkt.WebApp/Views/Shared/_WorkMenu.cshtml
@@ -10,6 +10,7 @@
             <li class="fadeRight t-animated" data-t-show="6"><a href="@Url.Action("TextMoji","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/textmoji-thum.jpg" alt="" /> <span>MMF TEXTMOJI</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="7"><a href="@Url.Action("MahindraPragatiYojana","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/mmf-pragati-yojana-thum.jpg" alt="" /> <span>Mahindra Pragati Yojana</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="8"><a href="@Url.Action("MahindraRuralBharat","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/mahindra-rural-bharat-thum.jpg" alt="" /> <span>Mahindra Rural Bharat</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="8"><a href="@Url.Action("mahindra-top-nfo","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/mmf-top250.jpg" alt="" /> <span>TOP 250 NIVESH YOJANA</span> </a> </li>
         </ul>
 
         <ul id="pandg" class="horizontalScroll">
@@ -19,6 +20,13 @@
 
 
         <ul id="starplus" class="horizontalScroll">
+
+
+            <li class="fadeRight t-animated" data-t-show="31"><a href="@Url.Action("ted-ar-innovation","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/ted-ar.jpg" alt="" /> <span>Ted Ar Innovation</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="31"><a href="@Url.Action("ted2019","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/ted-talks-nai-baat.jpg" alt="" /> <span>Ted Talks Nayi Baat</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="30"><a href="@Url.Action("TheVoice","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/thevoice-thum.jpg" alt="" /> <span>The Voice</span> </a> </li>
+
+
             <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("NayiSoch","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/nayosoch-thum.jpg" alt="" /> <span>Nayi Soch</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="2"><a href="@Url.Action("Ted","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/ted-thum.jpg" alt="" /> <span>TED TALKS INDIA</span> </a> </li>
 
@@ -47,17 +55,16 @@
             <li class="fadeRight t-animated" data-t-show="21"><a href="@Url.Action("DancePlus2","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/danceplus-thum.jpg" alt="" /> <span>Dance+2</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="22"><a href="@Url.Action("Ikyawann","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/ikyawann-thum.jpg" alt="" /> <span>Ikyawann</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="23"><a href="@Url.Action("Baaghi2","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/bhaghi-2-thum.jpg" alt="" /> <span>Baaghi 2</span> </a> </li>
-            <li class="fadeRight t-animated" data-t-show="24"><a href="@Url.Action("DivyaDrishtiContent","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/divya-drishti-content-thum.jpg" alt="" /> <span>Divya Drishti Content</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="25"><a href="@Url.Action("DivyaDrishtiInnovation","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/divya-drishti-innovation-thum.jpg" alt="" /> <span>Divya Drishti Innovation</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="26"><a href="@Url.Action("KarnSangini","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/karn-sangini-thum.jpg" alt="" /> <span>Karn Sangini</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="27"><a href="@Url.Action("Nazar","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/nazar-thum.jpg" alt="" /> <span>Nazar</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="28"><a href="@Url.Action("Sanju","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/sanju-thum.jpg" alt="" /> <span>Sanju</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="29"><a href="@Url.Action("Stree","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/stree-thum.jpg" alt="" /> <span>Stree</span> </a> </li>
-            <li class="fadeRight t-animated" data-t-show="30"><a href="@Url.Action("TheVoice","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/thevoice-thum.jpg" alt="" /> <span>The Voice</span> </a> </li>
+
             <!--  <li class="fadeRight t-animated" data-t-show="10"><a href="ted.php" class="hvr-grow-shadow"><img src="images/thums/ted-thum.jpg" alt=""/> <span>Ted Talks</span> </a> </li>
 
-            <li class="fadeRight t-animated" data-t-show="11"><a href="kullfi.php" class="hvr-grow-shadow"><img src="images/thums/kullfi-thum.jpg" alt=""/> <span>Kullfi</span> </a> </li>
-            <li class="fadeRight t-animated" data-t-show="12"><a href="hsubh.php" class="hvr-grow-shadow"><img src="images/thums/hsubh-thum.jpg" alt=""/> <span>HAR SHAAKH PE ULLU BAITHAA HAI</span> </a> </li>	-->
+              <li class="fadeRight t-animated" data-t-show="11"><a href="kullfi.php" class="hvr-grow-shadow"><img src="images/thums/kullfi-thum.jpg" alt=""/> <span>Kullfi</span> </a> </li>
+              <li class="fadeRight t-animated" data-t-show="12"><a href="hsubh.php" class="hvr-grow-shadow"><img src="images/thums/hsubh-thum.jpg" alt=""/> <span>HAR SHAAKH PE ULLU BAITHAA HAI</span> </a> </li>	-->
         </ul>
         <ul id="star" class="horizontalScroll">
             <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("Swp","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/swp-thum.jpg" alt="" /> <span>Star Writers Program</span> </a> </li>
@@ -91,7 +98,7 @@
             </ul>*@
         <ul id="yaarii" class="horizontalScroll">
             <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("Yaarii","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/yaarii-thum.jpg" alt="" /> <span>Yaarii</span> </a> </li>
-            <li class="fadeRight t-animated" data-t-show="2"><a href="@Url.Action("yaarii-website","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/yaarii-website-thum.jpg" alt="" /> <span>Yaarii Website</span> </a> </li>
+            @*<li class="fadeRight t-animated" data-t-show="2"><a href="@Url.Action("yaarii-website","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/yaarii-website-thum.jpg" alt="" /> <span>Yaarii Website</span> </a> </li>*@
             <li class="fadeRight t-animated" data-t-show="2"><a href="@Url.Action("yaarii-films","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/yaarii-film-thum.jpg" alt="" /> <span>Yaarii Film</span> </a> </li>
         </ul>
         @*<ul id="boutique" class="horizontalScroll">
@@ -126,7 +133,7 @@
         <li class="mahindra"><a data-related="mahindra" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/mahindra.png" alt="" /></a> </li>
         <li class="star-plus"><a data-related="starplus" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/starplus.png" alt="" /></a> </li>
         <li class="star"><a href="" data-related="star" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/star.png" alt="" /></a> </li>
-        <li class="yaarii"><a  data-related="yaarii" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/yaarii.png" alt="" /></a> </li>
+        <li class="yaarii"><a data-related="yaarii" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/yaarii.png" alt="" /></a> </li>
 
         <li class="png-health"><a href="" data-related="pandg" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/p-and-g.png" alt="" /></a> </li>
         <li class="usports"><a href="" data-related="usports" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/usports.png" alt="" /></a> </li>
@@ -134,15 +141,15 @@
         <li class="dubsmash"><a href="" data-related="dubsmash" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/dubsmash.png" alt="" /></a> </li>
         @*<li class="pedderjohnson"><a  data-related="pedderjohnson" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/pedderjohnson.png" alt="" /></a> </li>*@
 
-        <li class="indiabulls"><a  data-related="indiabulls" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/indiabulls.png" alt="" /></a> </li>
+        <li class="indiabulls"><a data-related="indiabulls" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/indiabulls.png" alt="" /></a> </li>
 
-        <li class="piramal"><a  data-related="piramal" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/piramal.png" alt="" /></a> </li>
+        <li class="piramal"><a data-related="piramal" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/piramal.png" alt="" /></a> </li>
 
-        <li class="one-plus"><a  data-related="oneplus" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/oneplus.png" alt="" /></a> </li>
-        <li class="editage"><a  data-related="editage" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/editage.png" alt="" /></a> </li>
+        <li class="one-plus"><a data-related="oneplus" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/oneplus.png" alt="" /></a> </li>
+        <li class="editage"><a data-related="editage" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/editage.png" alt="" /></a> </li>
 
-        <li class="nutrela"><a  data-related="nutrela" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/nutrela.png" alt="" /></a> </li>
-        <li class="birlawhiteputty"><a  data-related="birlawhiteputty" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/birla-white.png" alt="" /></a> </li>
+        <li class="nutrela"><a data-related="nutrela" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/nutrela.png" alt="" /></a> </li>
+        <li class="birlawhiteputty"><a data-related="birlawhiteputty" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/birla-white.png" alt="" /></a> </li>
         @*<li class="dubsmash"><a  data-related="dubsmash" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/dubsmash.png" alt="" /></a> </li>
             <li class="pedderjohnson"><a  data-related="pedderjohnson" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/pedderjohnson.png" alt="" /></a> </li>
             <li class="yaarii"><a  data-related="yaarii" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/yaarii.png" alt="" /></a> </li>*@
