--- a/Sparkt.WebApp/Views/Home/Index.cshtml
+++ b/Sparkt.WebApp/Views/Home/Index.cshtml
@@ -983,9 +983,9 @@
                         <a href="@Url.Action("OnePlus","work")"><img src="~/Content/images/clients/one-plus-logo.png" alt="One Plus" /></a>
                     </li>
                     <li> <a style="cursor:default"><img src="~/Content/images/clients/evolis.png" alt="Evolis" /></a> </li>
-                    <li>
+                    @*<li>
                         <a href="@Url.Action("brickex","work")"><img src="~/Content/images/clients/brickex-logo.png" alt="Brickex" /></a>
-                    </li>
+                    </li>*@
                     <li>
                         <a href="@Url.Action("IndiaRF","work")"><img src="~/Content/images/clients/rf-india-logo.png" alt="RF India" /></a>
                     </li>
@@ -1057,11 +1057,11 @@
                             <span>Content</span>
                         </li>
                         <li>
-                            <span>Marketing Sciences</span>
+                            <span>Media & Marketing Sciences</span>
                         </li>
-                        <li>
+                        @*<li>
                             <span>Media</span>
-                        </li>
+                        </li>*@
                     </ul>
                     <div class="resp-tabs-container">
                         <div class="resp-tab-content" id="campaigns">
@@ -2183,8 +2183,8 @@
                                     <li><a href="@Url.Action("MahindraMFExperience","work")"><img src="~/Content/images/xms-client-mahindra.png" alt=""><span><img src="~/Content/work/images/clients/mahindra.png" alt=""></span></a></li>
                                     <li><a href="@Url.Action("IndiaRF","work")"><img src="~/Content/images/xms-client-india-rf.png" alt=""><span><img src="~/Content/work/images/clients/india-rf.png" alt=""></span></a></li>
                                     <li><a href="@Url.Action("USports","work")"><img src="~/Content/images/xms-client-usports.png" alt=""><span><img src="~/Content/work/images/clients/usports.png" alt=""></span></a></li>
-                                    <li><a href="@Url.Action("PiramalCapital","work")"><img src="~/Content/images/xms-client-piramal-capital.png" alt=""><span><img src="~/Content/work/images/clients/piramal-capital-phfl.png" alt=""></span></a></li>
-                                    <li><a href="@Url.Action("Phfl","work")"><img src="~/Content/images/xms-client-phfl.png" alt=""><span><img src="~/Content/work/images/clients/piramal-capital-phfl.png" alt=""></span></a></li>
+                                    <li><a href="@Url.Action("piramalfoundation","work")"><img src="~/Content/images/piramal-foundation.jpg" alt=""><span><img src="~/Content/work/images/clients/piramal-capital-phfl.png" alt=""></span></a></li>
+                                    <li><a href="@Url.Action("Phfl","work")"><img src="~/Content/images/pchf.jpg" alt=""><span><img src="~/Content/work/images/clients/piramal-housing.png" alt=""></span></a></li>
                                     <li><a href="@Url.Action("brickex","work")"><img src="~/Content/images/xms-client-brickex.png" alt=""><span><img src="~/Content/work/images/clients/brickex.png" alt=""></span></a></li>
                                 </ul>
                             </div>
